# Tail

./: .gitignore  Cargo.toml  README.md
examples/: read_lines.rs
src/: lib.rs  main.rs
