[package]
name = "tail"
version = "0.3.0"
authors = ["Timothy Bess <tdbgamer@gmail.com>"]
description = "Tail implementation in Rust that is performant and resistant to file truncations"
repository = "https://github.com/tdbgamer/Tail"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
inotify = "0.5.0"
getopts = "0.2.17"

[lib]
name = "tail"
path = "src/lib.rs"
